--- a/www/index.html
+++ b/www/index.html
@@ -222,7 +222,7 @@
     
 
     <footer>
-        <span>Free Palestine <img src="palestine_flag.png" alt="Flag of Palestine" style="height: 16px; vertical-align: middle;"> | &copy; 2025 heythem. All rights reserved. <a href="https://github.com/heythem500" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/github.svg" alt="GitHub" style="height: 16px; vertical-align: middle;"></a></span>
+        <span>Free Palestine <img src="palestine_flag.png" alt="Flag of Palestine" style="height: 16px; vertical-align: middle;"> | &copy; 2025 heythem. All rights reserved. <a href="https://github.com/heythem500/SkyHero-Monitor" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/github.svg" alt="GitHub" style="height: 16px; vertical-align: middle;"></a></span>
     </footer>
 
     
